--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-matplotlib==3.8.0
-numpy==1.25.2
+streamlit>=1.24
 pandas==2.1.4
-seaborn==0.13.0
-streamlit==1.30.0
+numpy==1.26.4
+matplotlib==3.7.2
+seaborn>=0.12
