--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit>=1.24
 pandas==2.1.4
-numpy==1.26.4 
-matplotlib==3.7.2  
+numpy==1.26.4
+matplotlib==3.7.2
 seaborn>=0.12
 plotly>=5.15
+setuptools>=68.0
+wheel>=1.0
