--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit>=1.24
-pandas==2.1.4
-numpy==1.26.4
-matplotlib==3.7.2
-seaborn>=0.12
-plotly>=5.15
-setuptools>=68.0
-wheel>=1.0
+streamlit>=1.24,<2
+pandas>=2.0,<3
+numpy>=1.25,<2
+matplotlib>=3.7,<4
+seaborn>=0.12,<1
+scikit-learn>=1.3,<2
+plotly>=5.15,<6
